--- a/Portfolio.html
+++ b/Portfolio.html
@@ -620,10 +620,10 @@
                 <div class="stats-grid fade-in">
                     <div class="stat-card">
                         <div class="stat-number">8.68</div>
-                        <div class="stat-label">CGPA (up to 6th Sem)</div>
+                        <div class="stat-label">CGPA (up to 6<sup>th</sup> Sem)</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">10+</div>
+                        <div class="stat-number">5+</div>
                         <div class="stat-label">Projects Completed</div>
                     </div>
                     <div class="stat-card">
